# iit

./: .gitignore  Contributing.md  Dockerfile  README.md  eval.py  eval_causality.py  eval_information.py  eval_ioi.py  index.py  pvr.py  pyproject.toml  train.py  train_ioi.py  wrapper.py
iit/model_pairs/: __init__.py  base_model_pair.py  freeze_model_pair.py  iit_behavior_model_pair.py  iit_model_pair.py  iit_model_pairs.py  ioi_model_pair.py  nodes.py  probed_sequential_pair.py  stop_grad_pair.py  strict_iit_model_pair.py  strict_tracr_original.py  tracr_iit_model_pair.py  tracr_original.py
iit/tasks/: hl_model.py  task_loader.py
iit/tasks/docstring/: docstring_hl.py  test_docstring.py
iit/tasks/ioi/: __init__.py  ioi_config.py  ioi_dataset_tl.py  ioi_hl.py  test_ioi.py  train_ioi.py  utils.py
iit/tasks/mnist_pvr/: dataset.py  get_alignment.py  pvr_check_leaky_hl.py  pvr_hl.py  utils.py
iit/utils/: __init__.py  config.py  correspondence.py  eval_ablations.py  eval_datasets.py  eval_metrics.py  iit_dataset.py  index.py  logger.py  metric.py  node_picker.py  plotter.py  probes.py  wrapper.py
model_pairs/: __init__.py  base_model_pair.py  iit_model_pairs.py  probed_model_pair.py  probed_sequential_pair.py
tasks/mnist_pvr/: dataset.py  get_alignment.py  pvr_check_leaky_hl.py  pvr_hl.py
tests/: test_corr.py  test_datasets.py  test_hl_models.py  test_index.py  test_metric_logger.py  test_node_picker.py  test_probes.py
utils/: __init__.py  config.py  iit_dataset.py  index.py  plotter.py  probes.py  wrapper.py
